Fixing double border

--- a/src/styles.css
+++ b/src/styles.css
@@ -53,14 +53,15 @@ select {
 }
 
 .mapboxgl-popup {
-  border: none; /* Remove default border */
+  border: 2px solid black; /* Black border around the tooltip */
+  border-radius: 10px; /* Rounded corners */
 }
 
 .mapboxgl-popup-content {
   background: white;
   padding: 10px; /* Reduce padding */
-  border-radius: 10px; /* Rounded corners */
-  border: 2px solid rgb(0, 0, 0); /* Black border around the tooltip */
+  border-radius: 8px; /* Inner radius to match outer */
+  border: none; /* Remove inner border */
   white-space: normal;
   max-width: 250px; /* Reduce max-width */
   word-wrap: break-word; /* Ensure long words or URLs break properly */
@@ -69,7 +70,7 @@ select {
 }
 
 .mapboxgl-popup-tip {
-  border-top-color: rgb(255, 255, 255) !important; /* Ensure the popup tip has the same border color */
+  border-top-color: black !important; /* Ensure the popup tip has the same border color */
 }
 
 .tooltip strong {
